[gd_scene load_steps=13 format=2]

[ext_resource path="res://UI/UI.gd" type="Script" id=1]
[ext_resource path="res://UI/TimeSelectionContainer.gd" type="Script" id=2]
[ext_resource path="res://UI/EDay.gd" type="Script" id=3]
[ext_resource path="res://UI/EMinute.gd" type="Script" id=4]
[ext_resource path="res://UI/EYear.gd" type="Script" id=5]
[ext_resource path="res://UI/EHour.gd" type="Script" id=6]
[ext_resource path="res://UI/EMonth.gd" type="Script" id=7]
[ext_resource path="res://Artwork/Icons/Vector/control_pause.svg" type="Texture" id=8]
[ext_resource path="res://Artwork/Icons/Vector/control_play.svg" type="Texture" id=9]
[ext_resource path="res://Artwork/Icons/Vector/control_fast.svg" type="Texture" id=10]
[ext_resource path="res://Artwork/Icons/Vector/control_reverse.svg" type="Texture" id=11]
[ext_resource path="res://UI/ZoomSlider.gd" type="Script" id=12]

[node name="UI" type="Control"]
light_mask = 0
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1004.0
margin_bottom = 1004.0

[node name="TopContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1004.0
margin_bottom = 156.0

[node name="TimeSelectionContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopContainer"]
margin_right = 149.0
margin_bottom = 156.0
script = ExtResource( 2 )

[node name="ResetTime" type="Button" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer"]
margin_right = 149.0
margin_bottom = 20.0
text = "Reset time to current"

[node name="TimeGrid" type="GridContainer" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer"]
margin_top = 24.0
margin_right = 149.0
margin_bottom = 156.0
columns = 2

[node name="LYear" type="Label" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_top = 5.0
margin_right = 45.0
margin_bottom = 19.0
text = "Year"

[node name="EYear" type="SpinBox" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_left = 49.0
margin_right = 123.0
margin_bottom = 24.0
min_value = 1950.0
max_value = 2050.0
value = 1950.0
script = ExtResource( 5 )

[node name="LMonth" type="Label" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_top = 31.0
margin_right = 45.0
margin_bottom = 45.0
text = "Month"

[node name="EMonth" type="OptionButton" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_left = 49.0
margin_top = 28.0
margin_right = 123.0
margin_bottom = 48.0
text = "Jan"
items = [ "Jan", null, false, 0, null, "Feb", null, false, 1, null, "Mar", null, false, 2, null, "Apr", null, false, 3, null, "May", null, false, 4, null, "Jun", null, false, 5, null, "July", null, false, 6, null, "Aug", null, false, 7, null, "Sep", null, false, 8, null, "Oct", null, false, 9, null, "Nov", null, false, 10, null, "Dec", null, false, 11, null ]
selected = 0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LDay" type="Label" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_top = 57.0
margin_right = 45.0
margin_bottom = 71.0
text = "Day"

[node name="EDay" type="SpinBox" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_left = 49.0
margin_top = 52.0
margin_right = 123.0
margin_bottom = 76.0
min_value = 1.0
max_value = 31.0
value = 1.0
script = ExtResource( 3 )

[node name="LHour" type="Label" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_top = 85.0
margin_right = 45.0
margin_bottom = 99.0
text = "Hour"

[node name="EHour" type="SpinBox" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_left = 49.0
margin_top = 80.0
margin_right = 123.0
margin_bottom = 104.0
max_value = 24.0
value = 1.0
script = ExtResource( 6 )

[node name="LMinute" type="Label" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_top = 113.0
margin_right = 45.0
margin_bottom = 127.0
text = "Minute"

[node name="EMinute" type="SpinBox" parent="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid"]
margin_left = 49.0
margin_top = 108.0
margin_right = 123.0
margin_bottom = 132.0
max_value = 60.0
script = ExtResource( 4 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/TopContainer"]
margin_left = 153.0
margin_right = 893.0
margin_bottom = 156.0
size_flags_horizontal = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer"]
margin_right = 740.0
margin_bottom = 156.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer"]
margin_right = 740.0
margin_bottom = 20.0

[node name="ChooseCentric" type="OptionButton" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_left = 316.0
margin_right = 423.0
margin_bottom = 20.0
text = "Heliocentric"
items = [ "Heliocentric", null, false, 0, null, "Geocentric", null, false, 1, null ]
selected = 0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer"]
margin_top = 24.0
margin_right = 740.0
margin_bottom = 46.0

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 304.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="Rewind" type="Button" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 308.0
margin_right = 336.0
margin_bottom = 22.0
icon = ExtResource( 11 )

[node name="Pause" type="Button" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 340.0
margin_right = 368.0
margin_bottom = 22.0
icon = ExtResource( 8 )

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 372.0
margin_right = 400.0
margin_bottom = 22.0
icon = ExtResource( 9 )

[node name="Fast" type="Button" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 404.0
margin_right = 432.0
margin_bottom = 22.0
icon = ExtResource( 10 )

[node name="CenterContainer2" type="CenterContainer" parent="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 436.0
margin_right = 740.0
margin_bottom = 22.0
size_flags_horizontal = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TopContainer"]
margin_left = 897.0
margin_right = 1004.0
margin_bottom = 156.0

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/TopContainer/VBoxContainer2"]
margin_right = 107.0
margin_bottom = 40.0
text = "Grid"

[node name="MiddleContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 1004.0
margin_bottom = 976.0
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MiddleContainer"]
margin_right = 1004.0
margin_bottom = 816.0

[node name="Empty" type="CenterContainer" parent="MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer"]
margin_right = 984.0
margin_bottom = 816.0
size_flags_horizontal = 3

[node name="ZoomSlider" type="VSlider" parent="MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer"]
margin_left = 988.0
margin_right = 1004.0
margin_bottom = 816.0
min_value = 0.1
max_value = 8.0
step = 0.01
value = 1.0
scrollable = false
tick_count = 10
script = ExtResource( 12 )

[node name="BottomContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
margin_top = 980.0
margin_right = 1004.0
margin_bottom = 1004.0

[node name="Tabs" type="Tabs" parent="MarginContainer/VBoxContainer/BottomContainer"]
margin_right = 1004.0
margin_bottom = 24.0

[connection signal="pressed" from="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/ResetTime" to="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer" method="_on_ResetTime_pressed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid/EYear" to="." method="_on_EYear_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid/EMonth" to="." method="_on_EMonth_item_selected"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid/EDay" to="." method="_on_EDay_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid/EHour" to="." method="_on_EHour_value_changed"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/TopContainer/TimeSelectionContainer/TimeGrid/EMinute" to="." method="_on_EMinute_value_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/CenterContainer/ChooseCentric" to="." method="_on_ChooseCentric_item_selected"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer/Rewind" to="." method="_on_Rewind_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer/Pause" to="." method="_on_Pause_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/TopContainer/MarginContainer/VBoxContainer/HBoxContainer/Fast" to="." method="_on_Fast_pressed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/TopContainer/VBoxContainer2/CheckButton" to="." method="_on_CheckButton_toggled"]
[connection signal="value_changed" from="MarginContainer/VBoxContainer/MiddleContainer/HBoxContainer/ZoomSlider" to="." method="_on_ZoomSlider_value_changed"]
